--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <center>
       <h1 class="name">
         Pinger
-        <img src="logo.png" id="name_logo" />
+        <img src="Logo.png" id="name_logo" />
       </h1>
       <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11" id="login_box">
-        <img src="logo.png" style="width: 80px" />
+        <img src="Logo.png" style="width: 80px" />
         <h1>Welcome To Pinger!</h1>
         <h3>Pinger Is A Interactive Social Media App Which Can Be Used To Chat With Others Online Using Different Chat Rooms</h3>
         <br />
