--- a/room.html
+++ b/room.html
@@ -21,7 +21,7 @@
       <center>
         <h1 class="name">
           Pinger
-          <img src="logo.png" id="name_logo" />
+          <img src="Logo.png" id="name_logo" />
         </h1>
         <br />
         <h2 id="name_display1"></h2>
