Added Centre Alignment

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         Pinger
         <img src="Logo.png" id="name_logo" />
       </h1>
-      <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11" id="login_box">
+      <div id="login_box">
         <img src="Logo.png" style="width: 80px" />
         <h1>Welcome To Pinger!</h1>
         <h3>Pinger Is A Interactive Social Media App Which Can Be Used To Chat With Others Online Using Different Chat Rooms</h3>
