--- a/room.html
+++ b/room.html
@@ -25,13 +25,13 @@
         </h1>
         <br />
         <h2 id="name_display1"></h2>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11" id="join_box">
+        <div id="join_box">
           <h3>Join Or Create A Room</h3>
           <input type="text" id="room_name_input" placeholder="Enter Room Name" class="form-control" />
           <br />
           <button class="btn btn-primary" id="add_room">Join Room</button>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11" id="trending_rooms">
+        <div id="trending_rooms">
           <h3>Top Trending Rooms</h3>
         </div>
       </center>
