--- a/room.html
+++ b/room.html
@@ -29,7 +29,7 @@
           <h3>Join Or Create A Room</h3>
           <input type="text" id="room_name_input" placeholder="Enter Room Name" class="form-control" />
           <br />
-          <button class="btn btn-primary" id="add_room">Join Room</button>
+          <button class="btn btn-primary" id="add_room" onclick="join()">Join Room</button>
         </div>
         <div id="trending_rooms">
           <h3>Top Trending Rooms</h3>
