--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="/CSS/login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet" />
-    <script src="login.js"></script>
+    <script src="/JS/login.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -17,16 +17,16 @@
     <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
     <script defer src="//code.tidio.co/bo7ojrr3a3sjwj3r8wtpg8llxeyvhw0m.js" async></script>
     <title>Pinger</title>
-    <link rel="icon" href="Logo.png" />
+    <link rel="icon" href="/Images/Logo.png" />
   </head>
   <body>
     <center>
       <h1 class="name">
         Pinger
-        <img src="Logo.png" id="name_logo" />
+        <img src="/Images/Logo.png" id="name_logo" />
       </h1>
       <div id="login_box">
-        <img src="Logo.png" style="width: 80px" />
+        <img src="/Images/Logo.png" style="width: 80px" />
         <h1>Welcome To Pinger!</h1>
         <h3>Pinger Is A Interactive Social Media App Which Can Be Used To Chat With Others Online Using Different Chat Rooms</h3>
         <br />
