--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/live/3.1/firebase.js"></script>
     <script defer src="//code.tidio.co/bo7ojrr3a3sjwj3r8wtpg8llxeyvhw0m.js" async></script>
     <title>Pinger</title>
-    <link rel="icon" href="/Images/Logo.png" />
+    <link rel="icon" href="Images/Logo.png" />
   </head>
   <body>
     <center>
