--- a/HTML/chat.html
+++ b/HTML/chat.html
@@ -10,14 +10,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/chat.css" />
+    <link rel="stylesheet" href="CSS/chat.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet" />
-    <script src="/JS/chat.js"></script>
+    <script src="JS/chat.js"></script>
     <script defer src="//code.tidio.co/bo7ojrr3a3sjwj3r8wtpg8llxeyvhw0m.js" async></script>
     <title>Pinger</title>
-    <link rel="icon" href="/Images/Logo.png" />
+    <link rel="icon" href="Images/Logo.png" />
   </head>
   <body onload="startup()">
     <div class="container">
@@ -26,7 +26,7 @@
       <center>
         <h1 class="name">
           Pinger
-          <img src="/Images/Logo.png" id="name_logo" />
+          <img src="Images/Logo.png" id="name_logo" />
         </h1>
         <br />
         <div>
