--- a/HTML/room.html
+++ b/HTML/room.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/room.css" />
+    <link rel="stylesheet" href="CSS/room.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet" />
@@ -17,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>Pinger</title>
-    <link rel="icon" href="/Images/Logo.png" />
+    <link rel="icon" href="Images/Logo.png" />
   </head>
   <body onload="startup();">
     <div class="container">
@@ -26,7 +26,7 @@
       <center>
         <h1 class="name">
           Pinger
-          <img src="/Images/Logo.png" id="name_logo" />
+          <img src="Images/Logo.png" id="name_logo" />
         </h1>
         <br />
         <h2 id="name_display1"></h2>
