--- a/room.html
+++ b/room.html
@@ -35,6 +35,7 @@
           <input type="text" id="room_name_input" placeholder="Enter Room Name" class="form-control" />
           <br />
           <button class="btn btn-primary" id="add_room" onclick="join()">Join Room</button>
+          <button class="btn btn-primary" id="add_room" onclick="join()">Create Room</button>
         </div>
         <div id="trending_rooms">
           <h2 style="margin-bottom: 20px">Top Trending Rooms</h2>
