Added Contact Button On All Sections

--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,8 @@
           <img src="Images/Logo.png" id="name_logo" />
         </h1>
 
-        <br>
-        <h1> Under Development </h1>
+        <br />
+        <h2 id="name_display1"></h2>
       </center>
     </div>
   </body>
