--- a/notices.html
+++ b/notices.html
@@ -17,6 +17,7 @@
   <body onload="startup();">
     <div class="container">
       <button id="logout" class="glyphicon glyphicon-log-out btn" style="background-color: red; color: white" onclick="logout()">Logout</button>
+      <button id="contact" class="glyphicon glyphicon-phone btn" style="background-color: yellow; color: white" onclick="contact()">Contact</button>
       <button id="back" class="glyphicon glyphicon-log-out btn" style="background-color: red; color: white" onclick="back()">Back</button>
       <center>
         <h1 class="name">
