--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,12 @@
           Pinger
           <img src="Images/Logo.png" id="name_logo" />
         </h1>
-
         <br />
         <h2 id="name_display1"></h2>
+        <div id="send_container">
+          <input placeholder="Message..." class="form-control" id="msg" />
+          <button class="form-control btn btn-success" onclick="send()">Send!</button>
+        </div>
       </center>
     </div>
   </body>
